avoid using QChar constructor for key codes

auto c7 = QChar(0x1D11E);           // compiles, but undefined behavior at runtime

BUG: 483631